--- a/index.html
+++ b/index.html
@@ -30,26 +30,19 @@
           </div>
         </div>
       </div>
-    </header>
-    <section class="bg-perfil">
-      <div class="container"><img src="assets/image/nombre-1.png">
-        <h2> FRONT-END DEVELOPER</h2>
-        <button>
-          <div class="sprite-anim-go"></div>
-        </button>
+      <div class="bg-perfil">
+        <div class="container"><img src="assets/image/name-2.png">
+          <h2> FRONT-END DEVELOPER</h2>
+        </div>
       </div>
-    </section>
+    </header>
     <section id="about-me">
       <div class="container">
         <h2 class="pd">CONOCEME </h2>
         <div class="row">
           <div class="col-md-4"><img src="assets/image/perfil.jpg" class="perfil"></div>
           <div class="col-md-8">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            <p>Mi nombre es Monica Ccencho Olarte, me encanta progrmaar</p>
           </div>
         </div>
       </div>
@@ -59,13 +52,35 @@
         <h2 class="pd">HABILIDADES</h2>
       </div>
     </section>
-    <section class="trabajos">
+    <section class="works">
       <div class="container">
         <h2 class="pd">TRABAJOS</h2>
         <div class="row">
-          <div class="col-md-4"></div>
-          <div class="col-md-4"></div>
-          <div class="col-md-4"></div>
+          <div style="color:#34495E;" class="col-md-1">
+            <div class="btn-group"><a href="#scroller" data-slider="next"><img src="image/work/agency.png"></a></div>
+          </div>
+          <div class="col-md-10">
+            <div id="scroller" class="carousel-inner">
+              <div class="second carousel-inner">
+                <div class="item active">
+                  <div class="row">
+                    <div class="col-xs-4">
+                      <div class="item-inner"><img src="image/work/future.png" class="photo"></div>
+                    </div>
+                    <div class="col-xs-4">
+                      <div class="item-inner"><img src="image/work/future.png" class="photo"></div>
+                    </div>
+                    <div class="col-xs-4">
+                      <div class="item-inner"><img src="image/work/future.png" class="photo"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div style="color:#34495E;" class="col-md-1">
+            <div class="btn-group"><a href="#scroller" data-slider="next"><img src="image/work/agency.png"></a></div>
+          </div>
         </div>
       </div>
     </section>
